Added text labels and icons that follow the 3d object. done in html, so it retains size and so you can see the position of the planet more clearly (previously the planets were too small to be seen)

--- a/client/src/components/UI/slider.css
+++ b/client/src/components/UI/slider.css
@@ -1,4 +1,7 @@
 /* Track with pointy ends */
+body {
+  overflow: hidden; /* Prevents overflow of child elements */
+}
 
 #speed-slider {
   -webkit-appearance: none;
